update and rework
